fix: avoid text overflow in poll and send button

--- a/frontend/public/styles/chat.css
+++ b/frontend/public/styles/chat.css
@@ -94,7 +94,7 @@ body {
     color: white;
     cursor: pointer;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    font-size: 1.5rem;
+    font-size: calc(0.6vw + 0.5rem);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,7 +117,7 @@ body {
     color: white;
     cursor: pointer;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    font-size: 1.5rem;
+    font-size: calc(0.6vw + 0.5rem);
     display: flex;
     align-items: center;
     justify-content: center;
